# formlabs-api-python

./: formlabs-materials-data.json
examples/: batching-with-pdfs.py  pdf_generation.py  pyproject.toml
examples/web-api-user-managment/: add-users.py  requirements.txt
local-api/: formlabs-api-local-openapi.yaml  formlabs-local-api-latest.html  gen-config.yaml
local-api/lib/: README.md  pyproject.toml  setup.py
local-api/lib/docs/: HollowModelRequest.md  LabelPartRequest.md  ModifyingASceneApi.md  OperationsApi.md  PackAndCageRequest.md  RemoteAccessApi.md  ScanToModelRequest.md
local-api/lib/formlabs_local_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
local-api/lib/test/: test_access_token.py  test_add_drain_holes200_response.py  test_add_drain_holes_request.py  test_api_info_api.py  test_auto_layout_request.py  test_auto_layout_request_custom_bounds.py  test_auto_orient_request.py  test_auto_pack_request.py  test_auto_support_request.py  test_base_device_status_model.py  test_base_printing_device_status_model.py  test_default.py  test_dental_mode.py  test_device_status_model.py  test_devices_api.py  test_direction_vectors_model.py  test_discover_devices200_response.py  test_discover_devices_request.py  test_drain_hole_model.py  test_drain_hole_model_depth_mm.py  test_duplicate_model_request.py  test_error_model.py  test_error_model_error.py  test_estimated_print_time_model.py  test_euler_angles_model.py  test_exporting_api.py  test_fps_file.py  (+80 more)
local-api/minimal-lib/: setup.py
web-api/lib/: README.md  pyproject.toml  setup.py
(+112 files in other folders)
